correct checkbox field in xs that was not wrapping

--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -67,6 +67,7 @@ h1 {
 
 .checkbox-and-text {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   a {
     margin-left: 5px;
